Dojo 1.8 UI seems to work well now. Issue of Patient Context Details not showing the second time fixed. It was a CSS issue with height not set

--- a/src/AuShadha/AuShadha/media/custom/styles/style.css
+++ b/src/AuShadha/AuShadha/media/custom/styles/style.css
@@ -76,6 +76,21 @@
    left: 45px;
    min-height: 300px;
    max-height: 375px;
+   margin-top: 20px;
+	}
+
+	#contact_list,
+	#phone_list,
+	#guardian_list,
+	#demographics_list,
+	#allergy_list,
+	#patient_media_list,
+	#admission_list,
+	#visit_list
+{
+   min-height : 230px;
+   max-height : 230px;
+//   overflow   :auto;
 	}
 
 
